fix headphones visibility in all chats tab

--- a/src/dotnet/Chat.UI.Blazor/Components/ChatMenu/chat-menu.css
+++ b/src/dotnet/Chat.UI.Blazor/Components/ChatMenu/chat-menu.css
@@ -28,9 +28,6 @@
 .chat-menu-btn.btn.btn-round.on:hover .btn-content {
     @apply text-primary;
 }
-.show-headphones .btn.btn-round.play {
-    @apply visible;
-}
 .message-counter-badge {
     @apply absolute right-2 flex-x min-w-8 justify-center items-center rounded-full text-04 text-base;
 }
